[package]
name = "litra"
version = "2.5.1"
edition = "2021"
authors = ["Tim Rogers <timrogers@github.com>"]
description = "Control Logitech Litra lights from the command line, Model Context Protocol (MCP) clients and Rust applications"
repository = "https://github.com/timrogers/litra-rs"
license = "MIT"
readme = "README.md"
categories = ["hardware-support", "command-line-utilities"]
keywords = ["logitech", "litra", "glow", "beam", "light"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hidapi = "2.6.3"
clap = { version = "4.5.53", features = ["derive"], optional = true }
serde = { version = "1.0.219", features = ["derive"], optional = true }
serde_json = { version = "1.0.145", optional = true }
tabled = { version = "0.20", optional = true }
rmcp = { version = "0.12.0", features = ["server", "transport-io", "macros"], optional = true }
tokio = { version = "1.48", features = ["rt", "rt-multi-thread", "macros"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
schemars = { version = "1.1", features = ["derive"], optional = true }

[features]
default = ["cli", "mcp"]
cli = ["dep:clap", "dep:serde", "dep:serde_json", "dep:tabled"]
mcp = ["cli", "dep:rmcp", "dep:tokio", "dep:tracing", "dep:tracing-subscriber", "dep:schemars"]

[[bin]]
name = "litra"
path = "src/main.rs"
