[package]
name = "litra"
version = "3.3.0"
edition = "2021"
authors = ["Tim Rogers <timrogers@github.com>"]
description = "Control Logitech Litra lights from the command line, Model Context Protocol (MCP) clients and Rust applications"
repository = "https://github.com/timrogers/litra-rs"
license = "MIT"
readme = "README.md"
categories = ["hardware-support", "command-line-utilities"]
keywords = ["logitech", "litra", "glow", "beam", "light"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hidapi = "2.6.4"
clap = { version = "4.5.56", features = ["derive"], optional = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.149" }
tabled = { version = "0.20", optional = true }
rmcp = { version = "0.14.0", features = ["server", "transport-io", "macros"], optional = true }
tokio = { version = "1.49", features = ["rt", "rt-multi-thread", "macros"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
schemars = { version = "1.2", features = ["derive"], optional = true }
ureq = { version = "3.0.11", features = ["json"], optional = true }
toml = { version = "0.9.11", optional = true }
dirs = { version = "6.0.0", optional = true }
chrono = { version = "0.4.43", default-features = false, features = ["std", "clock"], optional = true }
colored = { version = "2.2", optional = true }

[features]
default = ["cli", "mcp"]
cli = ["dep:clap", "dep:tabled", "dep:ureq", "dep:toml", "dep:dirs", "dep:chrono", "dep:colored"]
mcp = ["cli", "dep:rmcp", "dep:tokio", "dep:tracing", "dep:tracing-subscriber", "dep:schemars"]

[[bin]]
name = "litra"
path = "src/main.rs"
